Removed Mongo and Neo
