# multi-server/routes/routes.mongo.js
@@ -1,11 +1,0 @@
-const mongoSRouter = require('./router.mongo.student');
-const mongoTRouter = require('./router.mongo.teacher');
-
-const baseRoute = '/mongo';
-
-module.exports = function (app) {
-
-    app.use(baseRoute + '/student', mongoSRouter);
-    app.use(baseRoute + '/teacher', mongoTRouter);
-
-}
