# multi-server/util/app.js
@@ -4,7 +4,6 @@ const swaggerUi = require('swagger-ui-express')
 const app = express();
 app.use(cors({ origin: '*' }));
 require('dotenv').config();
-const mongoose = require('../connectors/db.mongo');
 const { authenticateToken } = require('../util/authenticate');
 
 //Allows the use of JSON (for POST requests)
@@ -24,11 +23,6 @@ app.use(express.static('frontend', { extensions: ['html'], index: 'login.html' }
 // load the mysql routers to our app
 require("../routes/routes.mysql")(app);
 
-// Load the neo4j routes to our app 
-require('../routes/routes.neo')(app);
-
-// load the mongo routers to our app
-require("../routes/routes.mongo")(app);
 
 // load the swagger documentation endpoint to our app
 const swaggerFile = require('../docs/swagger-output.json');
